--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="mine.png" type="image/x-icon"/>
-  <script src="main.js" defer></script>
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" defer></script>
   <title>Minesweeper</title>
 </head>
 <body>
@@ -125,5 +126,20 @@
     <div></div>
   </section>
 
+  <section class="info">
+
+    <div class="info__mines">
+      <h4 class="minesInPlay"></h4>
+      <h5>Mines In Play</h5>
+    </div>
+
+    <button class="difficulty">Difficulty</button>
+
+    <div class="info__timer">
+      <h4 class="timer"></h4>
+      <h5>Timer</h5>
+    </div>
+
+  </section>
 </body>
 </html>
